deploy/cicd/tekton/demo-proj-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: demo-proj
  name: demo-proj
spec:
  rules:
    - host: demo-proj.com
      http:
        paths:
          - backend:
              service:
                name: el-demo-proj-git-repo
                port:
                  name: port-8080
            path: /el-demo-proj-git-repo
            pathType: Prefix
status:
  loadBalancer: {}
